# ChangeLog for app-shells/bash-completion
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash-completion/ChangeLog,v 1.179 2009/05/31 18:22:46 ranger Exp $

  31 May 2009; Brent Baude <ranger@gentoo.org>
  bash-completion-1.0-r3.ebuild:
  Marking bash-completion-1.0-r3 ppc64 for bug 265504

  21 May 2009; Raúl Porcel <armin76@gentoo.org>
  bash-completion-1.0-r3.ebuild:
  arm/ia64/s390 stable wrt #265504

  19 May 2009; Tiago Cunha <tcunha@gentoo.org>
  bash-completion-1.0-r3.ebuild:
  stable sparc, bug 265504

  18 May 2009; Christian Faulhammer <fauli@gentoo.org>
  bash-completion-1.0-r3.ebuild:
  stable x86, bug 265504

  17 May 2009; nixnut <nixnut@gentoo.org> bash-completion-1.0-r3.ebuild:
  ppc stable #265504

  16 May 2009; Jeremy Olexa <darkside@gentoo.org>
  bash-completion-1.0-r3.ebuild:
  amd64 stable, bug 265504

  16 May 2009; Jeroen Roovers <jer@gentoo.org>
  bash-completion-1.0-r3.ebuild:
  Stable for HPPA (bug #265504).

  16 May 2009; Tobias Klausmann <klausman@gentoo.org>
  bash-completion-1.0-r3.ebuild:
  Stable on alpha, bug #265504

*bash-completion-1.0-r3 (14 Apr 2009)

  14 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  -bash-completion-1.0-r2.ebuild, +bash-completion-1.0-r3.ebuild:
  it is better to have a revision bump here so we can avoid any file collision
  business in the future.

  14 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  bash-completion-1.0-r2.ebuild:
  add cowsay blocker due to file collision, bug 266112

*bash-completion-1.0-r2 (12 Apr 2009)

  12 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  -bash-completion-1.0-r1.ebuild, +bash-completion-1.0-r2.ebuild:
  Fix inconsistent file name change during upgrade path. Do not break existing
  setups. bug 265807

*bash-completion-0.20081219-r1 (10 Apr 2009)

  10 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  +bash-completion-0.20081219-r1.ebuild,
  -bash-completion-20081219-r1.ebuild: