@@ -1,7 +1,7 @@
 AUX bash-completion-1.0-bash4.patch 861 RMD160 865e8f745b8cc53125db6903b1954523f99a277e SHA1 503b825408f4a366d1d4795e3ae4f6e51cf500d5 SHA256 e0ecf183746f6b8075ecc7891e265a10b4a3593f6690f66c320fc18b023ac1ca
 AUX bash-completion-1.0-gentoo.patch 2125 RMD160 33682926cca6bcccc971a8c3dde91180cdf858e1 SHA1 e9a5da746221148dcd7661a6a996a9c4ba7ef149 SHA256 8a7bcd782b8980c8f370ca022872b7f894596f8289dbbd800327659b95a9a85a
 DIST bash-completion-1.0.tar.gz 143578 RMD160 b590c2633c5c10c3e98b14a74f4e96c910b6177d SHA1 61040795731f5ff509c46e818a1edf0a7a93e11d SHA256 bd96e7d2858f02783046908a984993736f1189d07d82e9ce4b465068dd7187ef
-EBUILD bash-completion-1.0-r2.ebuild 3070 RMD160 a04844203c4e49a3971830dc428b1169055f373e SHA1 40226e732eb2f9928c8ef834caba66fe48aa8032 SHA256 f1519e91a09cc8d0ce1e4290a45b1b02de566c538c0e9a3c71b4564d7bc3e660
 EBUILD bash-completion-1.0-r3.ebuild 3098 RMD160 e406f764291e2d80ca596bc14072cd061a5fa39e SHA1 663d18c41bb6dd5bfe9bf16ea4a3f2b4c925a4d8 SHA256 80e14dc27df275d74706f7fbfee76220fe62d94b0e24e57328e686a3199aae45
-MISC ChangeLog 32251 RMD160 83cea707c02daa0c2d59a43e8297dc364c210d9b SHA1 f5d39b026ac659f88ec51ddadaad1d66e135bfcd SHA256 b77182b10602dfdf4993975c5ba4c208e62c7e8e7ad2b0683fd4f20755a4b4c6
+EBUILD bash-completion-1.0-r4.ebuild 3196 RMD160 f01cc2062d2b1d961848b09f5f979876da9abd28 SHA1 8f847f70242c5d2ea77969d3bf825550855d9409 SHA256 6409a1f673fdc75841f3b2d6e48955257b071e2fa292f0565f79f06557549fa4
+MISC ChangeLog 32552 RMD160 92781b12440436b3b2ba8e051bf30f7cc0f5b6cf SHA1 5b5f62abd88dcef266e58969cb5d9c2984f96382 SHA256 f1ea144d96f048fce991ca752e17fcc75a07f7b4a52c5fe9fdba82caaf8af9d6
 MISC metadata.xml 930 RMD160 e6718602012b2cfcb5be5bfc962889bf88f4dc73 SHA1 a585c9cfc0bdb59ee4c7ff1e786bc53d28d36aac SHA256 281bfd91145b2ae2a5c2774802dee741bbe625777b1c4e3eaefdca406e534ba9
