@@ -1,6 +1,16 @@
 # ChangeLog for app-shells/bash-completion
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/bash-completion/ChangeLog,v 1.179 2009/05/31 18:22:46 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/bash-completion/ChangeLog,v 1.181 2009/06/03 22:23:07 darkside Exp $
+
+*bash-completion-1.0-r4 (03 Jun 2009)
+
+  03 Jun 2009; Jeremy Olexa <darkside@gentoo.org>
+  +bash-completion-1.0-r4.ebuild:
+  Fix incompatibility with sys-apps/module-init-tools-3.8, bug 271286
+
+  03 Jun 2009; Jeremy Olexa <darkside@gentoo.org>
+  -bash-completion-0.20081219-r1.ebuild:
+  remove old
 
   31 May 2009; Brent Baude <ranger@gentoo.org>
   bash-completion-1.0-r3.ebuild:
